Table users {
  id uuid [pk, default: 'gen_random_uuid()']
  is_guest boolean [not null, default: true]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  deleted_at timestamptz [null]
  first_activity_at timestamptz [null, note:'이 사용자가 처음 감정일기 or 피드백 요청한 시간']
  email text [null, unique]
  email_verified text [null, unique]
  email_pending text [null]
  email_verified_at timestamptz [null]
}

Table passes {
  id uuid [pk, default: 'gen_random_uuid()']
  name text [not null, note:'1회권, 10회권']
  total_uses int [not null, note:'총 사용 가능 횟수']
  price int [not null]
  description text [null]
  is_active boolean [not null, default: true]
  expires_after_days int [null, note:'만료일 계산용']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  note:'이용권 종류'
}

Table user_passes {
  id uuid [pk, default: 'gen_random_uuid()']
  user_id uuid [null, ref:> users.id, note:'onDelete: restrict']
  pass_id uuid [not null, ref:> passes.id, note:'restrict']
  remaining_uses int [not null, note:'잔여 회차']
  purchased_at timestamptz [null]
  expires_at timestamptz [not null, note:'구매일 기준 30일 후 만료']
  uuid_code text [not null, unique, note:'이용권 인증 코드']
  first_used_at timestamptz [null, note:'이 이용권이 처음 사용된 시간 (예: 감정 분석 요청됨)']
  source text [not null, default: 'kmong']
  source_order_id text [null]
  buyer_handle text [null]
  created_at timestamptz [not null, default: `now()`]
  is_active boolean [not null, default: true]
  prev_pass_id uuid [null, ref:> user_passes.id, note:'이전 이용권(같은 사용자). onDelete: restrict']
  updated_at timestamptz [null, default: `now()`, note: '마지막 수정 시각 (함수/쿼리에서 직접 now() 세팅)']
  first_seen_at timestamptz [null]
  rollup_seed_text text [null]
  note:'이용권 구매 기록. User:Pass = M:N 구조를 해결하는 중간 테이블'
} 

Table standard_emotions {
  id uuid [pk, default: 'gen_random_uuid()']
  name text [not null, note:'기쁨, 슬픔 등']
  description text [null]
  soft_order int [not null]
  color_code text [not null]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  note:'표준 감정 정의'
}

Table emotion_entries{
  id uuid [pk, default: 'gen_random_uuid()']
  user_pass_id uuid [not null, ref:> user_passes.id, note:'onDelete: cascade']
  user_id uuid [not null, ref:> users.id, note: '직접 연결된 사용자. onDelete: set null']
  raw_emotion_text text [not null, note:'사용자 입력 원본']
  supposed_emotion_text text [null, note:'GPT가 추정한 감정']
  standard_emotion_id uuid [null, ref:> standard_emotions.id, note:'GPT 분류 결과. onDelete: set null']
  standard_emotion_reasoning text [null, note:'GPT가 왜 그렇게 분류했는지']
  situation_raw_text text [not null, note:'상황 원문 (항상 저장)']
  situation_summary_text text [null]
  journal_raw_text text [not null, note:'일기 원문 (항상 저장)']
  journal_summary_text text [null]
  created_at timestamptz [not null, default: `now()`]
  is_feedback_generated boolean [default: false]
  status text [not null, default: 'pending', note: 'pending, ready, error']
  error_reason text [null]
  emotion_level_label_snapshot text [not null]
  feedback_type_label_snapshot text [not null]
  feedback_speech_label_snapshot text [not null]
  feedback_generated_at timestamptz [null]
  situation_raw_length int [null]
  journal_raw_length int [null]
  rollup_digest_snapshot text [null]
  updated_at timestamptz [not null, default: `now()`]
  note:'감정 분석 요청 및 결과 저장'
}

Table emotion_feedbacks{
  id uuid [pk, default: 'gen_random_uuid()']
  emotion_entry_id uuid [not null, ref:> emotion_entries.id, note:'onDelete: cascade']
  feedback_text text [not null]
  language text [not null]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  note:'GPT 피드백 결과'
}

Table submission_state {
  sid text [pk, note:'Tally가 폼 제출 건마다 발급하는 고유ID']
  user_pass_id uuid [null, ref:> user_passes.id]
  emotion_entry_id uuid [null, ref:> emotion_entries.id]
  uuid_code text [not null, note: 'user_passes 테이블의 이용권 인증 코드']
  submit_status text [not null, note: 'pending, fail, ready, done']
  status_reason text [null]
  updated_at timestamptz [not null, default: `now()`]
  created_at timestamptz [not null, default: `now()`]
  status_log text [null]
}

Table submission_history {
  id bigserial [pk]
  user_pass_id uuid [null, ref:> user_passes.id]
  emotion_entry_id uuid [null, ref:> emotion_entries.id]
  uuid_code text [null]
  result_status text [not null, note: 'pass, fail, error']
  result_reason text [null, note: 'not_found, expired, no_uses, inactive, exception']
  ip inet [null]
  user_agent text [null]
  latency_ms int [null, note: '응답까지 걸린 시간(ms)']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  error_json jsonb [null]
}

Table analysis_requests {
  id uuid [pk, default: 'gen_random_uuid()']
  user_id uuid [null, ref: > users.id, note: 'ON DELETE SET NULL, 분석 대상 사용자']
  user_pass_id uuid [null, ref: > user_passes.id, note: 'ON DELETE SET NULL, pass 단위 분석일 때만 연결 (없으면 null)']
  scope text [not null, note: "allowed: 'pass' | 'user_all' (분석 범위)"]
  status text [not null, default: 'pending', note: "allowed: 'pending' | 'done' (실행 상태)"]
  reason text [null, note: '대기열 사유. 예) email_not_verified, quota_limit']
  analysis_text text [not null, note: '사용자에게 보여줄 최종 분석 리포트(서술)']
  stats_json jsonb [null, note: '선택: 숫자 통계 및 보조 데이터. carryover_digest(이전 10회권 요약 3~5줄)도 여기에 저장. 예) {\"carryover_digest\":\"...\"}"']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  Note: "CHECK rule: if scope='pass' then user_pass_id NOT NULL and user_id NULL; if scope='user_all' then user_id NOT NULL and user_pass_id NULL"
}

Table pass_rollup_digests {
  id uuid [pk, default: 'gen_random_uuid()']
  user_pass_id uuid [not null, unique, ref: > user_passes.id, note: 'ON DELETE CASCADE, 이 이용권의 롤링 요약을 1행으로 유지(유니크)']
  digest_text text [not null, note: '팩트만 담는 누적 요약(3~5줄, ~500자 권장). 조언/명령문 금지']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  entry_no int [null]
}

Table one_time_email_deliveries {
  id uuid [pk, default: 'gen_random_uuid()']
  user_id uuid [null, ref: > users.id, note: '소유자 알 수 있으면 연결, 아니면 NULL']
  submission_id uuid [not null, note: '이 이메일이 대응하는 제출/요청 ID (예: 감정일기 제출 ID)']
  emotion_entry_id uuid [ref: > emotion_entries.id, note: '이메일이 연결된 일기 엔트리']
  emotion_feedback_id uuid [ref: > emotion_feedbacks.id, note: '이메일이 연결된 피드백 결과']
  purpose text [not null, default: 'feedback_result', note: '발송 목적 코드 (ex. feedback_result, receipt 등)']
  email text [not null, note: '1회 발송용 주소; 영구 저장/마케팅 금지']
  status one_time_email_status [not null, default: 'pending']
  created_at timestamptz [not null, default: `now()`]
  sent_at timestamptz [null]
  fail_reason text [null, note: '실패 사유(옵션): SMTP 오류 등']
  expires_at timestamptz [not null, default: "now() + interval '7 days'", note: '보관 만료 시각; 만료되면 삭제 대상']
  deleted_at timestamptz [null, note: '소프트 삭제(옵션)']
  Note: '피드백 결과 1회 전송 전용 임시 저장소. 장기 보관/마케팅 사용 금지.'
}

Enum ai_task_task_type {
  classify_standard_emotion
  summarize_situation_and_journal
  rolling_digest
  feedback
  carryover_digest
}

Enum ai_task_summarize_mode {
  situation
  journal
  both
  none
}

Table ai_task_runs {
  id                uuid        [pk, not null, default: `gen_random_uuid()`]
  emotion_entry_id  uuid        [ref: > emotion_entries.id, note: 'ON DELETE SET NULL']
  task_type         text        [not null, note: 'see Enum ai_task_task_type']
  provider          text        [not null, default: 'openai']
  model             text        [not null]
  request_id        text        [null]
  prompt_tokens     int         [null]
  completion_tokens int         [null]
  total_tokens      int         [null, note: 'GENERATED ALWAYS AS (prompt_tokens + completion_tokens) STORED']
  temperature       numeric(3,2) [null]
  status            text        [not null, default: 'ok']
  error_code        text
  prompt_version    text
  created_at        timestamptz [not null, default: `now()`]
  updated_at        timestamptz [not null, default: `now()`]
  summarize_mode    text        [null, note: 'see Enum ai_task_summarize_mode']

  indexes {
    (emotion_entry_id, created_at) [name: 'idx_ai_task_runs_entry']
    (task_type, created_at)        [name: 'idx_ai_task_runs_task']
  }
}

able rpc_debug_log {
  id           bigint        [pk, not null, note: 'default nextval(public.rpc_debug_log_id_seq)']
  ts           timestamptz   [not null, default: `now()`]
  func         text          [not null]
  phase        text
  entry_id     uuid
  user_pass_id uuid
  msg          text
  data         jsonb

  Note: 'Debug log table. Primary key on id. RLS is enabled.'
}

Table email_verify_tokens {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, ref: > users.id, note: 'Index: idx_evt_user']
  email text [not null]
  token text [not null, unique, note: 'Index: idx_evt_token']
  purpose text [not null, default: 'verify']
  issued_at timestamptz [not null, default: `now()`]
  expires_at timestamptz [not null, default: `(now() + '00:15:00'::interval)`]
  used_at timestamptz
  ip inet
  user_agent text
  meta jsonb
  created_at timestamptz [not null, default: `now()`]
}

Table revisit_keys {
  id uuid [pk, default: `gen_random_uuid()`, not null]
  user_pass_id uuid [not null, ref: > user_passes.id, note: 'FK → user_passes(id), ON DELETE CASCADE\nUnique index (ux_revisit_keys_user_pass)']
  code text [not null, unique, note: 'Unique key (code), Index (ix_revisit_keys_code)']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  expires_at timestamptz [not null, default: `(now() + interval '30 days')`]
  last_used_at timestamptz [note: '마지막 사용 시각']
  revoked_at timestamptz [note: '취소 시각']
}